[package]
name = "revertable"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "~1.9.22"
primitive-types = { version = "0.11.1", default-features = false, features = ["serde_no_std"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
solana-sdk = "~1.9.22"
solana-program-test = "~1.9.22"

[lib]
name = "revertable"
crate-type = ["lib", "cdylib"]